--- a/api/api.csproj
+++ b/api/api.csproj
@@ -15,4 +15,9 @@
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.14.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Model\produto\" />
+    <Folder Include="Model\viaCep\" />
+  </ItemGroup>
+
 </Project>
